nivasa-macros/tests/trybuild/schedule_timeout_invalid_target.stderr
error: `#[timeout]` only supports inherent methods
 --> tests/trybuild/schedule_timeout_invalid_target.rs:3:1
  |
3 | #[timeout(3000)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `timeout` (in Nightly builds, run with -Z macro-backtrace for more info)
