nivasa-macros/tests/trybuild/schedule_timeout_invalid_target.rs
use nivasa_macros::timeout;

#[timeout(3000)]
struct Jobs;

fn main() {}
